# stt-bench

./: .gitignore  README.md  pyproject.toml
src/: main.py  models.py  tasks.py
