[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stt-bench"
version = "0.2.0"
authors = [
  { name="Gautam Jha", email="gautam@kalpalabs.ai" },
]
description = "A benchmark tool for Speech-to-Text models."
readme = "README.md"
license = { file="LICENSE" }
requires-python = "==3.12.3"
dependencies = [
    "datasets==4.0.0",
    "hf-transfer==0.1.9",
    "librosa>=0.11.0",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "torchcodec==0.5.0",
    "transformers>=4.52.4",
    "jiwer>=4.0.0",
    "openai>=2.6.0",
    "onnxruntime>=1.23.2",
    "typer>=0.20.0",
    "deepgram-sdk>=5.2.0",
    "indic-nlp-library>=0.92",
    "urduhack>=0.1.4",
    "pycountry>=24.6.1",
    "openai-whisper>=20250625",
    "sarvamai>=0.1.21",
    "google-genai>=1.46.0",
]

[project.scripts]
stt-bench = "src.main:app"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true
